infra/aks/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-worlds
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure-dns
spec:
  tls:
  - hosts:
    - hello-worlds.moveez.de
    secretName: wildcard
  rules:
  - host: hello-worlds.moveez.de
    http:
      paths:
      - path: /
        backend:
          serviceName: ketchup-service
          servicePort: 80
